[package]
name = "exploring-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
parking_lot = { version = "0.12", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "net", "process", "rt-multi-thread", "signal", "time"]}

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async", "async_tokio"] }
fake = "2.9"
quickcheck = "1"
quickcheck_macros = "1"

[[bench]]
name = "dyndispatch"
harness = false

[[bench]]
name = "rand"
harness = false

[[bench]]
name = "sleep"
harness = false
